Fix aspect ratio on mobile & improve modal UI

--- a/ui/component/selectAsset/style.scss
+++ b/ui/component/selectAsset/style.scss
@@ -36,7 +36,7 @@
     div {
       display: flex;
       position: absolute;
-      top: 1px;
+      top: 5px;
       left: calc(20% + 50px);
       gap: var(--spacing-xxxs);
 
@@ -48,6 +48,14 @@
         border-radius: var(--border-radius);
         opacity: 0.6;
       }
+
+      @media (max-width: $breakpoint-small) {
+        top: 6px;
+        span {
+          width: 12px;
+          height: 4px;
+        }
+      }
     }
   }
   .channel-preview__thumbnail {
@@ -56,7 +64,7 @@
     height: 42px;
     background: var(--color-header-button);
     border-radius: 50%;
-    top: 54px;
+    top: 46px;
     left: 20%;
     box-shadow: 0 1px 2px 0 black, 0 2px 5px 0 rgb(0 0 0 / 60%);
     img,
@@ -64,6 +72,10 @@
       border-radius: 50%;
       width: 100%;
       height: 100%;
+    }
+
+    @media (max-width: $breakpoint-small) {
+      top: 20px;
     }
   }
 
@@ -178,9 +190,10 @@
 
   img {
     padding: 0;
-    object-fit: contain;
+    object-fit: fit;
     max-height: 350px;
-    max-width: 466px;
+    // max-width: 466px;
+    max-width: 100%;
   }
 }
 
@@ -210,5 +223,24 @@
   h2 {
     font-weight: 900;
     line-height: 1rem;
+  }
+}
+
+.modal {
+  .upload-actions {
+    .checkbox {
+      margin-top: var(--spacing-m);
+      height: 100%;
+
+      label {
+        display: flex;
+        align-items: center;
+      }
+    }
+
+    button {
+      margin-left: auto;
+      margin-right: 0 !important;
+    }
   }
 }
